@@ -32,6 +32,7 @@
 * Change behavior of the Check for upgrades system setting so that it only prevents mango from automatically checking.  One can now manually check
 * Upgrade Jackson databind to 2.9.10 for security purposes
 * Upgrade commons-beanutils to 1.9.4 for security purposes
+* Improve performance of System Settings listeners
 
 *Version 3.6.4*
 * Revert data source management permission to only allow creating new data sources, not give access to all data sources
